<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:layoutDirection="rtl">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nav_back"/>

    <ImageView
        android:id="@+id/nav_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/standard_margin"
        android:layout_marginRight="@dimen/medium_margin"
        app:srcCompat="@drawable/nav_avatar" />

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_image"
        android:layout_alignStart="@+id/nav_image"
        android:layout_alignLeft="@+id/nav_image"
        android:text="@string/nav_header_title"
        android:fontFamily="@font/samim_fd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:layout_below="@id/nav_name"
        android:layout_alignRight="@+id/nav_name"/>

</RelativeLayout>
