<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.SignUpActivity"
    android:layoutDirection="rtl">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/standard_margin"
        app:cardElevation="@dimen/standard_margin"
        tools:context=".activity.SignUpActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="@string/text_registering"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/edit_text_user_phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:inputType="phone"
                android:textSize="12sp"
                android:hint="@string/edit_text_register_hint"
                android:background="@drawable/edit_text_background"
                android:drawableRight="@drawable/edit_text_icon"
                />
            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:textStyle="bold"
                android:text="@string/text_button_sign_up"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_sign_up_background"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>