<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".activity.VerifyPhoneActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/medium_margin"
        app:cardCornerRadius="@dimen/standard_margin"
        app:cardElevation="@dimen/standard_margin"
        tools:context=".activity.SignUpActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_phone_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>
            <TextView
                android:id="@+id/txt_correct_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:text="(ویرایش شماره، کلیک کنید!)"
                android:textSize="14sp"
                android:textColor="@color/fbutton_color_green_sea"/>
            <EditText
                android:id="@+id/edit_text_verify_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:paddingRight="@dimen/standard_margin"
                android:inputType="number"
                android:textSize="12sp"
                android:hint="@string/edit_text_verify_code"
                android:background="@drawable/edit_text_background"
                android:drawableRight="@drawable/edit_text_icon"/>

            <Button
                android:id="@+id/button_verify_code"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:textStyle="bold"
                android:text="@string/button_verify_code"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_sign_up_background"/>
            <TextView
                android:id="@+id/txt_verify_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_gravity="center"
                tools:text="10 ثانیه تا ارسال مجدد کد تایید"
                android:textColor="@color/fbutton_color_amethyst"
                android:textSize="13sp"/>
            <Button
                android:id="@+id/button_verify_code_resend"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/button_verify_code_resend"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_verify_code_resend"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>